fixed portfolio spacing again and got rid of weird body shadow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -72,8 +72,8 @@ body {
   display: -ms-flexbox;
   display: flex;
   color: rgb(255, 255, 255);
-  text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
-  box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
+  text-shadow: 0 .05rem .1rem rgba(0, 0, 0, 0);
+  box-shadow: inset 0 0 5rem rgba(0, 0, 0, 0);
 }
 .cover-container {
   max-width: 50em;
